# aoc2016

./: pyproject.toml
day01/: 01.py
day02/: 01.py
day03/: 01.py
day04/: 01.py
day05/src/: main.rs
day06/: 01.py
day07/: 01.py
day08/: 01.py
day09/: 01.py
day10/: 01.py
day11/: 01.py
day12/: 01.py
day13/: 01.py
day14/: 01.py
day15/: 01.py
day16/: 01.py
day17/: 01.py
day18/: 01.py
day19/: 01.py
day20/: 01.py  t1.txt
day21/: 01.py  t2.txt
day22/: 01.py
day23/: 01.py
day24/: 01.py
day25/: 01.py
