[tool.poetry]
name = "aoc2016"
version = "0.1.0"
description = "Advent of Code 2016"
authors = ["Ajurna <ajurna@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
tqdm = "^4.66.1"
frozendict = "^2.3.8"
regex = "^2023.10.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
